#pragma once
#include "Component.hpp"

namespace gestalt::foundation {

    struct MeshComponent : Component {
      size_t mesh;
    };



}  // namespace gestalt